istio-test/timeout-inject/3-timeout-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - nginx-svc
  http:
  - route:
    - destination:
        host: nginx-svc
    timeout: 2s
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd-svc
spec:
  hosts:
  - httpd-svc
  http:
  - fault:
      delay:
        percentage:
          value: 100
        fixedDelay: 5s
    route:
    - destination:
        host: httpd-svc
